# PGE-triSYCL-extension

./: .gitignore  CMakeLists.txt  README.md
include/: Shape.h  Texture.h  abstract.h  olcSYCL.h  pch.h
include/abstract/: Shape.h  Texture.h
src/: Shape.cpp  Texture.cpp  olcSYCL.cpp
src/abstract/: Shape.cpp  Texture.cpp
tests/include/test/: Shape.h  Texture.h  pch.h
tests/src/test/: Shape.cpp  Texture.cpp  main.cpp
